<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/user_profile_menu"
        android:title="@string/user_profile_menu"
        app:showAsAction="never"/>

    <!-- this is the email one -->
    <item
        android:id="@+id/gen_pdf"
        android:title="@string/gen_pdf"
        app:showAsAction="never"/>
    <!-- this is the notification button for debugging -->
    <item
        android:id="@+id/notification_menu"
        android:title="@string/notification_menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/notification_cancel_menu"
        android:title="@string/notification_cancel_menu"
        app:showAsAction="never"/>
</menu>

